--- a/src/sass/_variabless.scss
+++ b/src/sass/_variabless.scss
@@ -7,10 +7,15 @@ $dark-blue: #3f4b9f;
 $white: #fff;
 $black: #000;
 
+$color-menu: #404040;
+$color-menu-active: #616161;
 $text-grey: #939393;
 
 $font-size-title: 60px;
 $lh-title: 1;
+
+$font-size-title-modal: 36px;
+$lh-title-modal: 1.23;
 
 $font-size-title: 24px;
 $lh-title: 1.55;
@@ -21,13 +26,14 @@ $lh-article: 1;
 $font-size-description: 18px;
 $lh-article: 1.22;
 
-$font-size-menu-item: 18px;
+$font-size-menu-item: 16px;
 $lh-menu-item: 1;
 
 $font-size-subtitle: 14px;
 $lh-subtitle: 1.17;
 
 $font-family: 'Kharkiv',Arial,sans-serif;
+$font-family-arial: Arial,sans-serif;
 $font-weight-bold: 500;
 $font-weight-menu-item: 400;
 $font-weight-normal: 300;
