home section create

--- a/src/sass/_variabless.scss
+++ b/src/sass/_variabless.scss
@@ -11,6 +11,9 @@ $color-menu: #404040;
 $color-menu-active: #616161;
 $text-grey: #939393;
 
+$font-size-title-home: 88px;
+$lh-title-home: 1.15;
+
 $font-size-title: 60px;
 $lh-title: 1;
 
@@ -41,6 +44,6 @@ $font-weight-lite: 100;
 
 $extraSmall-width: 479px;
 $small-width: 639px;
-$medium-width: 959px;
+$medium-width: 960px;
 $large-width: 979px;
 $extraLarge-width: 1199px;
