--- a/src/components/MobileNavBar/mobile-nav-bar.scss
+++ b/src/components/MobileNavBar/mobile-nav-bar.scss
@@ -4,9 +4,8 @@
   display: none;
   @include large{
     display: block;
-    height: 4rem;
+    height: 100%;
     background-color: $white;
-    width: 100vw;
 
     &--container {
       width: 100%;
