--- a/src/sass/_variabless.scss
+++ b/src/sass/_variabless.scss
@@ -6,6 +6,8 @@ $pink: #f6adfb;
 $dark-blue: #3f4b9f;
 $white: #fff;
 $black: #000;
+$service-background: #212121;
+$underline: #3e3e3e;
 
 $color-menu: #404040;
 $color-menu-active: #616161;
@@ -14,8 +16,8 @@ $text-grey: #939393;
 $font-size-title-home: 88px;
 $lh-title-home: 1.15;
 
-$font-size-title: 60px;
-$lh-title: 1;
+$font-size-title-article: 60px;
+$lh-title-article: 1;
 
 $font-size-title-modal: 36px;
 $lh-title-modal: 1.23;
@@ -27,7 +29,7 @@ $font-size-article: 24px;
 $lh-article: 1;
 
 $font-size-description: 18px;
-$lh-article: 1.22;
+$lh-description: 1.22;
 
 $font-size-menu-item: 16px;
 $lh-menu-item: 1;
