--- a/src/sass/_variabless.scss
+++ b/src/sass/_variabless.scss
@@ -7,11 +7,12 @@ $dark-blue: #3f4b9f;
 $white: #fff;
 $black: #000;
 $service-background: #212121;
-$underline: #3e3e3e;
+$underline: #e2e2e2;
 
 $color-menu: #404040;
 $color-menu-active: #616161;
 $text-grey: #939393;
+$color-portfolio-subtitle: #a9a9a9;
 
 $font-size-title-home: 88px;
 $lh-title-home: 1.15;
