--- a/src/sass/_variabless.scss
+++ b/src/sass/_variabless.scss
@@ -11,6 +11,7 @@ $underline: #e2e2e2;
 
 $color-menu: #404040;
 $color-menu-active: #616161;
+$color-contact-item: #9d9d9d;
 $text-grey: #939393;
 $color-portfolio-subtitle: #a9a9a9;
 
