--- a/src/App.scss
+++ b/src/App.scss
@@ -21,6 +21,7 @@ body {
   font-family: $font-family;
   font-weight: 400;
   line-height: 1;
+  overflow-x: hidden;
 
   background-color: $black;
   color: $white;
