--- a/src/components/ContactLinks/contact-links.scss
+++ b/src/components/ContactLinks/contact-links.scss
@@ -87,6 +87,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 2px solid $black;
   box-shadow: 0 0 20px 0 rgb(0 0 0 / 30%);
   width: 60px;
   height: 60px;
