--- a/src/sections/Footer/footer.scss
+++ b/src/sections/Footer/footer.scss
@@ -67,6 +67,7 @@
       font-weight: $font-weight-normal;
       white-space: nowrap;
       transition: 1s;
+      cursor: pointer;
 
       &:hover {
         opacity: 0.7;
